# catalog_autotests

./: .gitignore  Makefile  QUICK_START_GUIDE.md  README.md  conftest.py  debug_arsenal.py  debug_mark_360_area_tour.py  env  env.example  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cicd.yml  deploy-allure.yml
allure-report/: Makefile  README.md  conftest.py  index.html  pytest.ini  requirements.txt
allure-report/combined-results/: 0264958f-2bd5-48ba-9bbb-bc4741e469bc-container.json  03d0522a-1760-42de-8d9f-d4c70a3ab48e-container.json  03fd0139-c2d6-4da4-9996-4b79c22d81ab-container.json  05663c83-ff97-4cb0-8dc2-0ca13195b830-result.json  058ca6ba-fb2f-4e77-bb48-a3957976ee79-container.json  06cd4ede-3d8d-4cf2-89f3-a87d4e3485de-container.json  086a83ec-d301-43b3-bce0-fb0463560af1-container.json  09642701-f719-4d03-8b24-69460f6361e4-result.json  097a60ba-38cb-4a1a-83b2-d7c0c81b940b-container.json  09a3f7a7-2bcd-43b4-a9c6-56edcfb8d950-container.json  09b9b387-21cf-42a8-9a31-29cfe18841bf-container.json  0a996756-3041-4cc9-a710-ce4f77f59d96-container.json  0b9e8342-960d-4c72-9cea-9a3b2b66aef2-container.json  0c1f8be5-c7a3-4622-8d13-0e2a72412beb-container.json  0df08f3d-e6b5-4376-af8f-33eed964b99e-result.json  0e98242f-b43c-4622-9822-5797bdfbc311-result.json  104a1f1c-3700-42ab-8344-99c16d1198e5-container.json  12ec2898-1cb2-4fad-86ea-689e5057cefb-result.json  14566819-ec9d-4f12-a5e5-66b79d33e3a8-container.json  1694c869-599a-460d-bd58-5737e772059e-container.json  1707e6c6-17aa-4df3-a198-eea74f93126b-container.json  1752da39-2f65-4642-a7f8-5cdbece5daa5-result.json  192bc449-c1fd-4d86-ab10-97cebb6362e7-container.json  19d0f3ff-6c58-4c5b-820f-c48a705416a3-container.json  1ac1b6fb-9f63-4dd7-8b93-ed37af35cc35-container.json  1aeaaa4b-657b-45fe-85f3-b45bb1765ca9-container.json  1b0621e8-4b1c-43ec-b064-906dd654ed01-container.json  1b6f72dc-25e1-4452-bd6c-68d7a6ee3f62-container.json  1db7f2d9-93db-4053-905f-94c3b60b0099-container.json  1dd583cc-32bf-4f01-b32c-62f1907de8ef-container.json  1edb5278-7be2-44d9-b4f7-7bc2fdfb03c2-container.json  1f8ed5a4-63c9-4ab6-a0f3-087d61b61556-container.json  1fe40865-bdfe-4f33-b35d-a49866e59114-result.json  2095d9e3-8770-42d8-818c-56bb527425dc-container.json  237ce63f-6979-4c9f-b876-354791e8776b-container.json  23dd5ca5-d4e2-404e-9c67-b7dd39009768-result.json  25072bac-daba-4a46-bf19-2a9ceca9349d-container.json  2533af15-0a08-4fba-9653-2a1d2f67d21e-container.json  25535ab5-2a50-4500-b864-2c20ed5a99a2-result.json  28324df3-4586-42eb-818c-ee45fca469b2-container.json  (+260 more)
allure-report/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
allure-report/locators/: map_locators.py  project_locators.py
config/: environments.py  settings.py
core/: base_page.py  decorators.py  exceptions.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
locators/: __init__.py  base.py  base_locators.py  map_locators.py  mobile_locators.py  project_locators.py
pages/: agent_page.py  base_page.py  client_page.py  home_page.py  map_page.py  mobile_page.py  page_factory.py  project_page.py
utils/: api_client.py  collect_mark_locators.py  debug_mark_mobile.py  logger.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+76356 files in other folders)
